--- a/03_python_fundamental/01_variables_and_data_types.ipynb
+++ b/03_python_fundamental/01_variables_and_data_types.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,13 @@
       "String: Hello, Python!\n",
       "Boolean: True\n",
       "List: [1, 2, 3]\n",
-      "Dictionary: {'a': 1, 'b': 2}\n"
+      "Dictionary: {'a': 1, 'b': 2}\n",
+      "nama: hakim\n",
+      "nickname: murod\n",
+      "age: 24\n",
+      "gender: man\n",
+      "myFriend:  ['iksan', 'firin', 'wati']\n",
+      "friends: {'iksan': 23, 'firin': 35, 'wati': 30}\n"
      ]
     }
    ],
@@ -43,7 +49,7 @@
     "my_float = 3.14          # Float\n",
     "my_string = \"Hello, Python!\"  # String\n",
     "my_bool = True           # Boolean\n",
-    "my_list = [1, 2, 3]      # List\n",
+    "my_list = [1, 2, 3]      # List= dalam list lebih baik satu type data\n",
     "my_dict = {\"a\": 1, \"b\": 2}  # Dictionary\n",
     "\n",
     "# Print the variables\n",
@@ -55,17 +61,52 @@
     "print(\"Dictionary:\", my_dict)\n",
     "\n",
     "# TODO: Declare a variable to store your name and print it\n",
+    "nama : str = \"hakim\"\n",
+    "print(\"nama:\",nama)\n",
     "# TODO: Declare a variable to store your age and print it\n",
+    "nickname : str = \"murod\"\n",
+    "age : int = 24\n",
+    "print(\"nickname:\",nickname)\n",
+    "print(\"age:\",age)\n",
     "# TODO: Declare a variable to store your gender and print it\n",
+    "gender :str= \"man\"\n",
+    "print(\"gender:\",gender)\n",
     "# TODO: Declare a variable to store 3 or 4 of your friend names and print them\n",
-    "# TODO: Declare a variable to store your friends name and their age and print them"
+    "myFriend : list[str] = [\"iksan\",\"firin\",\"wati\"]\n",
+    "print(\"myFriend: \",myFriend)\n",
+    "# TODO: Declare a variable to store your friends name and their age and print them\n",
+    "friends: dict[str, int]={\n",
+    "    \"iksan\": 23,\n",
+    "    \"firin\": 35,\n",
+    "    \"wati\": 30\n",
+    "    \n",
+    "}\n",
+    "print(\"friends:\", friends)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 19\n",
+      "Difference: 11\n",
+      "Product: 60\n",
+      "Division: 3.75\n",
+      "Floor Division: 3\n",
+      "Modulus: 3\n",
+      "Exponentiation: 50625\n",
+      "average: 9.5\n",
+      "square root of a: 3.872983346207417\n",
+      "nilai ganjil\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Perform basic arithmetic operations (addition, subtraction, multiplication, division, floor division, modulus, exponentiation) and print the results.\n",
@@ -80,7 +121,7 @@
     "prod_result = a * b\n",
     "div_result = a / b       # Float division\n",
     "floor_div = a // b       # Integer (floor) division\n",
-    "mod_result = a % b       # Modulus\n",
+    "mod_result = a % b       # Modulus=sisa pembagian\n",
     "exp_result = a ** b      # Exponentiation\n",
     "\n",
     "# Print all results\n",
@@ -93,8 +134,16 @@
     "print(\"Exponentiation:\", exp_result)\n",
     "\n",
     "# TODO: Calculate and print the average of a and b\n",
+    "average: float = (a+b)/2\n",
+    "print(\"average:\", average)\n",
     "# TODO: Calculate and print the square root of a\n",
-    "# TODO: Check if a is even or odd"
+    "square : float = a ** 0.5\n",
+    "print(\"square root of a:\",square)\n",
+    "# TODO: Check if a is even or odd\n",
+    "if a%2==0:\n",
+    "    print(\"nilai genap\")\n",
+    "else:\n",
+    "    print(\"nilai ganjil\")   "
    ]
   },
   {
@@ -253,6 +302,7 @@
     "print(\"Symmetric Difference:\", sym_diff_set)\n",
     "\n",
     "# TODO: Add a new element to set_a and remove an element from set_b, then print both sets.\n",
+    "\n",
     "# TODO: Check if set_a is a subset of set_b and print the result.\n",
     "# TODO: Check if set_b is a superset of set_a and print the result."
    ]
@@ -298,22 +348,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside function, global_var: I am global\n",
+      "Inside function, local_var: I am local\n",
+      "Outside function, global_var: I have been modified globally\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Demonstrate the difference between global and local variables within functions.\n",
     "\"\"\"\n",
     "# Global variable\n",
     "global_var = \"I am global\"\n",
-    "\n",
+    "    \n",
     "def my_function():\n",
+    "    global global_var\n",
     "    # Local variable\n",
     "    local_var = \"I am local\"\n",
     "    print(\"Inside function, global_var:\", global_var)\n",
     "    print(\"Inside function, local_var:\", local_var)\n",
     "    \n",
     "    # TODO: Modify the global variable inside this function using the 'global' keyword.\n",
-    "    global global_var\n",
     "    global_var = \"I have been modified globally\"\n",
     "\n",
     "# Call the function\n",
@@ -385,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "course_assignments-W1NPJChe",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -399,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
