--- a/03_python_fundamental/01_variables_and_data_types.ipynb
+++ b/03_python_fundamental/01_variables_and_data_types.ipynb
@@ -148,9 +148,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated Message: Hello, Alice!\n",
+      "First 5 characters: Hello\n",
+      "Last 6 characters: Alice!\n",
+      "Formatted Message: Alice is 30 years old.\n",
+      "HELLO\n",
+      "Hello, Bob!\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Practice string concatenation, slicing, and formatting using f-strings.\n",
@@ -173,15 +187,38 @@
     "print(\"Formatted Message:\", formatted_message)\n",
     "\n",
     "# TODO: Convert the entire greeting to uppercase and print the result.\n",
+    "new_Greeting : str = greeting.upper()\n",
+    "print(new_Greeting)\n",
     "# TODO: Replace \"Alice\" with \"Bob\" in the message and print the result.\n",
-    "# TODO: Calculate the length of the message and print the result."
+    "replace: str = message.replace(\"Alice\",\"Bob\")\n",
+    "print(replace)\n",
+    "# TODO: Calculate the length of the message and print the result.\n",
+    "print(len(message))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First fruit: apple\n",
+      "Last fruit: date\n",
+      "After appending: ['apple', 'banana', 'cherry', 'date', 'elderberry']\n",
+      "After removing 'banana': ['apple', 'cherry', 'date', 'elderberry']\n",
+      "Slice (2nd to 4th fruits): ['cherry', 'date', 'elderberry']\n",
+      "['apple', 'fig', 'cherry', 'date', 'elderberry']\n",
+      "5\n",
+      "['apple', 'fig', 'cherry', 'date']\n",
+      "4\n",
+      "['apple', 'cherry', 'date', 'fig']\n",
+      "['fig', 'date', 'cherry', 'apple']\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Create and modify a list by performing operations such as accessing elements, appending, removing, and slicing.\n",
@@ -205,18 +242,38 @@
     "print(\"Slice (2nd to 4th fruits):\", fruits[1:4])\n",
     "\n",
     "# TODO: Insert \"fig\" at the second position and print the updated list.\n",
+    "insert : str = fruits.insert(1,\"fig\")\n",
+    "print(fruits)\n",
     "# TODO: Count the length of the list and print the result.\n",
+    "print(len(fruits))\n",
     "# TODO: Remove the last fruit and print the updated list.\n",
+    "pop : str = fruits.pop()\n",
+    "print(fruits)\n",
     "# TODO: Count the length of the updated list and print the result.\n",
+    "print(len(fruits))\n",
     "# TODO: Sort the list in alphabetical order and print the updated list.\n",
-    "# TODO: Reverse the list and print the updated list."
+    "fruits.sort()\n",
+    "print(fruits)\n",
+    "# TODO: Reverse the list and print the updated list\n",
+    "fruits.reverse()\n",
+    "print(fruits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuple: ('red', 'green', 'blue')\n",
+      "First color: red\n",
+      "('red', 'green', 'blue', 'purple', 'orange')\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Create a tuple, access its elements, and demonstrate its immutability.\n",
@@ -229,15 +286,35 @@
     "print(\"First color:\", colors[0])\n",
     "\n",
     "# TODO: Combine the tuple with another tuple (\"purple\", \"orange\") to form a new tuple and print it.\n",
+    "new_color = (\"purple\",\"orange\")\n",
+    "result = colors + new_color\n",
+    "print(result)\n",
     "# Note: Uncomment the following line to see the immutability error.\n",
     "# colors[1] = \"yellow\"  # This should raise an error as tuples are immutable.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Name: Bob\n",
+      "After adding GPA: {'name': 'Bob', 'age': 22, 'major': 'Computer Science', 'GPA': 3.8}\n",
+      "After updating age: {'name': 'Bob', 'age': 23, 'major': 'Computer Science', 'GPA': 3.8}\n",
+      "After deleting 'major': {'name': 'Bob', 'age': 23, 'GPA': 3.8}\n",
+      "name: Bob\n",
+      "age: 23\n",
+      "GPA: 3.8\n",
+      "{'name': 'Bob', 'age': 23, 'GPA': 3.8, 'minor': 'Mathematics'}\n",
+      "4\n",
+      "dict_keys(['name', 'age', 'GPA', 'minor'])\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Create a dictionary to store key-value pairs and perform operations such as adding, updating, and deleting entries.\n",
@@ -265,11 +342,17 @@
     "    print(f\"{key}: {value}\")\n",
     "\n",
     "# TODO: Check if the key \"minor\" exists; if not, add it with the value \"Mathematics\", then print the dictionary.\n",
+    "if \"minor\" not in student :\n",
+    "    student[\"minor\"] = \"Mathematics\"\n",
+    "print(student)\n",
     "# TODO: Get the length of the dictionary and print the result.\n",
+    "print(len(student))\n",
     "# TODO: Get the keys of the dictionary and print the result.\n",
+    "keys = student.keys()\n",
+    "print(keys)\n",
     "# TODO: Get the values of the dictionary and print the result.\n",
     "# TODO: Get the items of the dictionary and print the result.\n",
-    "# TODO: Get the value for the key \"age\" and print the result."
+    "# TODO: Get the value for the key \"age\" and print the result.)\n"
    ]
   },
   {
@@ -459,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
