--- a/03_python_fundamental/01_variables_and_data_types.ipynb
+++ b/03_python_fundamental/01_variables_and_data_types.ipynb
@@ -311,7 +311,10 @@
       "GPA: 3.8\n",
       "{'name': 'Bob', 'age': 23, 'GPA': 3.8, 'minor': 'Mathematics'}\n",
       "4\n",
-      "dict_keys(['name', 'age', 'GPA', 'minor'])\n"
+      "dict_keys(['name', 'age', 'GPA', 'minor'])\n",
+      "dict_values(['Bob', 23, 3.8, 'Mathematics'])\n",
+      "dict_items([('name', 'Bob'), ('age', 23), ('GPA', 3.8), ('minor', 'Mathematics')])\n",
+      "23\n"
      ]
     }
    ],
@@ -351,15 +354,33 @@
     "keys = student.keys()\n",
     "print(keys)\n",
     "# TODO: Get the values of the dictionary and print the result.\n",
+    "values = student.values()\n",
+    "print(values)\n",
     "# TODO: Get the items of the dictionary and print the result.\n",
-    "# TODO: Get the value for the key \"age\" and print the result.)\n"
+    "items = student.items()\n",
+    "print(items)\n",
+    "# TODO: Get the value for the key \"age\" and print the result.\n",
+    "age = student[\"age\"]\n",
+    "print(age)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Union: {1, 2, 3, 4, 5, 6, 7, 8}\n",
+      "Intersection: {4, 5}\n",
+      "Difference (A - B): {1, 2, 3}\n",
+      "Symmetric Difference: {1, 2, 3, 6, 7, 8}\n",
+      "{1, 2, 3, 4, 5, 6} {4, 5, 6, 7}\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Create sets and perform operations such as union, intersection, difference, and symmetric difference.\n",
@@ -385,16 +406,43 @@
     "print(\"Symmetric Difference:\", sym_diff_set)\n",
     "\n",
     "# TODO: Add a new element to set_a and remove an element from set_b, then print both sets.\n",
-    "\n",
+    "set_a.add(6)\n",
+    "set_b.discard(8)\n",
+    "print(set_a, set_b)\n",
     "# TODO: Check if set_a is a subset of set_b and print the result.\n",
-    "# TODO: Check if set_b is a superset of set_a and print the result."
+    "if set_a.issubset(set_b):\n",
+    "    print(\"set_a adalah subset dari set_b.\")\n",
+    "else:\n",
+    "    print(\"set_a BUKAN subset dari set_b.\")\n",
+    "# TODO: Check if set_b is a superset of set_a and print the result.\n",
+    "if set_b.issuperset(set_a):\n",
+    "    print(\"set_b adalah superset dari set_a.\")\n",
+    "else:\n",
+    "    print(\"set_b BUKAN superset dari set_a.\")\n",
+    "#Fungsi .issubset() di Python digunakan untuk mengecek apakah semua elemen dalam sebuah set terdapat dalam set lain."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted to integer: 100\n",
+      "Converted to float: 100.0\n",
+      "Converted to tuple: ('apple', 'banana', 'cherry')\n",
+      "Converted to set: {'banana', 'cherry', 'apple'}\n",
+      "Converted to string: 100\n",
+      "['Jhon', 'Doe', 'Smith']\n",
+      "<class 'str'>\n",
+      "['class', 'I,', 'class', 'II,', 'class', 'III']\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Perform type conversion between various data types (e.g., string to integer, list to tuple) and print the results.\n",
@@ -422,9 +470,19 @@
     "print(\"Converted to string:\", num_to_str)\n",
     "\n",
     "# TODO: Convert [\"Jhon\", \"Doe\", \"Smith\"] to a string and print the result.\n",
+    "nama_list = [\"Jhon\", \"Doe\", \"Smith\"]\n",
+    "convert_name = str(nama_list)\n",
+    "print(convert_name)\n",
+    "print(type(convert_name))\n",
     "# TODO: Convert string \"class I, class II, class III\" to a list and print the list.\n",
+    "my_class : str = \"class I, class II, class III\"\n",
+    "result_class = my_class.split()\n",
+    "print(result_class)\n",
+    "print(type(my_class))\n",
     "# TODO: Convert the keys of a dictionary into a list and print the list.\n",
-    "sample_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n"
+    "sample_dict = {\"a\": 1, \"b\": 2, \"c\": 3}\n",
+    "\n",
+    "keys_list = list(my_dict.keys())\n"
    ]
   },
   {
@@ -498,8 +556,14 @@
     "print(formatted_date)\n",
     "\n",
     "# TODO: Create an f-string that shows the result of a mathematical expression (e.g., 10 * 5) in a sentence.\n",
+    "math_expression = f\"The result of 10 * 5 is {10 * 5}.\"\n",
+    "print(math_expression)\n",
     "# TODO: Create an f-string that shows the result of a logical expression (e.g., 10 > 5) in a sentence.\n",
-    "# TODO: Create an f-string that shows a formatted string with multiple placeholders (e.g., \"Name: {name}, Age: {age}\")"
+    "logic_expression = f\"Is 10 greater than 5? {10 > 5}\"\n",
+    "print(logic_expression)\n",
+    "# TODO: Create an f-string that shows a formatted string with multiple placeholders (e.g., \"Name: {name}, Age: {age}\")\n",
+    "multi_placeholder = f\"Name: {name}, Age: {age}, Balance: ${balance:.2f}\"\n",
+    "print(multi_placeholder)"
    ]
   },
   {
