--- a/03_python_fundamental/02_looping_and_control_structures.ipynb
+++ b/03_python_fundamental/02_looping_and_control_structures.ipynb
@@ -10,9 +10,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color: red\n",
+      "indicating the loop has finished\n",
+      "Color: green\n",
+      "indicating the loop has finished\n",
+      "Color: blue\n",
+      "indicating the loop has finished\n",
+      "Color: yellow\n",
+      "indicating the loop has finished\n",
+      "The loop has finished\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Iterate over a list of items using a for loop and print each item.\n",
@@ -23,32 +39,81 @@
     "# Loop over the list and print each color\n",
     "for color in colors:\n",
     "    print(\"Color:\", color)\n",
+    "    print(\"indicating the loop has finished\")\n",
     "\n",
-    "# TODO: After the loop, print a message indicating the loop has finished.\n"
+    "# TODO: After the loop, print a message indicating the loop has finished.\n",
+    "print(\"The loop has finished\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number: 5\n",
+      "Number: 6\n",
+      "Number: 7\n",
+      "Number: 8\n",
+      "Number: 9\n",
+      "Number: 10\n",
+      "Number: 11\n",
+      "Number: 12\n",
+      "Number: 13\n",
+      "Number: 14\n",
+      "Number: 15\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Use the range() function to iterate over a sequence of numbers and print each number.\n",
     "\"\"\"\n",
     "# Loop from 0 to 9 using range()\n",
-    "for num in range(10):\n",
+    "for num in range(5,16):\n",
     "    print(\"Number:\", num)\n",
     "\n",
     "# TODO: Modify the loop to print numbers from 5 to 15.\n",
-    "# TODO: Add new loops to print numbers in reverse order."
+    "# TODO: Add new loops to print numbers in reverse order.\n",
+    "for i in range (10, 0, -1):\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter: 1\n",
+      "Counter: 2\n",
+      "Counter: 3\n",
+      "Counter: 4\n",
+      "Counter: 5\n",
+      "even: 2\n",
+      "even: 4\n",
+      "even: 6\n",
+      "even: 8\n",
+      "even: 10\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Objective: Use a while loop to print numbers from 1 to 5.\n",
@@ -62,6 +127,10 @@
     "    counter += 1  # Increment the counter\n",
     "\n",
     "# TODO: Write a while loop that prints even numbers from 2 to 10.\n",
+    "even = 2\n",
+    "while even <= 10:\n",
+    "    print(\"even:\", even)\n",
+    "    even += 2\n",
     "# TODO: Write a while loop using True condition and Break statement."
    ]
   },
@@ -247,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "course_assignments-W1NPJChe",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -261,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
